show answers when count down expires

--- a/app/tests_1_to_3.html
+++ b/app/tests_1_to_3.html
@@ -33,7 +33,9 @@
                 </div>
                 <div class="main-content" id="test-start-warning">
                     Време за решаване на теста - 10 минути. Започване?
-                    <button class="btn btn-primary" id="startTest" onclick="startCountDown(602000)">Започване</button>
+                    <button class="btn btn-primary" id="startTest"
+                            onclick="startCountDown(602000, './resources/answers_1_3.json')">Започване
+                    </button>
                 </div>
             </div>
         </div>
@@ -56,16 +58,20 @@
     </div>
     <div class="question">
         2. При нараняване на състезател, съдиите:<br>
-        <span class="answer"><input type="radio" name="question_2" value="a">задължително трябва да прекъснат играта</span><br>
+        <span class="answer"><input type="radio" name="question_2"
+                                    value="a">задължително трябва да прекъснат играта</span><br>
         <span class="answer"><input type="radio" name="question_2" value="b">трябва да се въздържат от прекъсване на игра при "жива" топка,
         освен ако не трябва да се предпази наранен състезател</span><br>
         <span class="answer"><input type="radio" name="question_2" value="c">при никакви обстоятелства не трябва да прекъсват играта</span><br>
     </div>
     <div class="question">
         3. Треньорът трябва да представи списък с имената на участниците в срещата и капитана най-малко:<br>
-        <span class="answer"><input type="radio" name="question_3" value="a">1 минута преди началото на срещата</span><br>
-        <span class="answer"><input type="radio" name="question_3" value="b">5 минути преди началото на срещата</span><br>
-        <span class="answer"><input type="radio" name="question_3" value="c">20 минути преди началото на срещата</span><br>
+        <span class="answer"><input type="radio" name="question_3"
+                                    value="a">1 минута преди началото на срещата</span><br>
+        <span class="answer"><input type="radio" name="question_3"
+                                    value="b">5 минути преди началото на срещата</span><br>
+        <span class="answer"><input type="radio" name="question_3"
+                                    value="c">20 минути преди началото на срещата</span><br>
     </div>
     <div class="question">
         4. Топката има статут на "жива", когато:<br>
@@ -82,7 +88,8 @@
         <span class="answer"><input type="radio" name="question_5" value="a">зависи от това коя част от пода е докосвал съдията в момента на
         допир с топката</span><br>
         <span class="answer"><input type="radio" name="question_5" value="b">напускане на очертанията</span><br>
-        <span class="answer"><input type="radio" name="question_5" value="c">нищо не се отсъжда - играта продължава</span><br>
+        <span class="answer"><input type="radio" name="question_5"
+                                    value="c">нищо не се отсъжда - играта продължава</span><br>
     </div>
     <div class="question">
         6. При извършване на грешка при вкарване на топката алтернативно в игра отвън:<br>
@@ -90,7 +97,7 @@
         без да се сменя посоката на индикаторната стрелка</span><br>
         <span class="answer"><input type="radio" name="question_6" value="b">топката се предоставя за вкарване отвън на противниковия отбор и
         незабавно се сменя посоката на индикаторната стрелка</span><br>
-       <span class="answer"> <input type="radio" name="question_6" value="c">дава се възможност на отбора, извършил грешката, да преповтори
+        <span class="answer"> <input type="radio" name="question_6" value="c">дава се възможност на отбора, извършил грешката, да преповтори
         вкарването на топката, като се сменя и посоката на индикаторната стрелка</span><br>
         <span class="answer"><input type="radio" name="question_6" value="d">дава се възможност на отбора, извършил грешката, да преповтори
         вкарването на топката, без да се сменя посоката на индикаторната стрелка</span><br>
@@ -100,7 +107,8 @@
         <span class="answer"><input type="radio" name="question_7" value="a">умишлено избиване с юмрук</span><br>
         <span class="answer"><input type="radio" name="question_7" value="b">умишлено изритване на топката с крак</span><br>
         <span class="answer"><input type="radio" name="question_7" value="c">случайно съприкосновение с коя да е част от крака</span><br>
-        <span class="answer"><input type="radio" name="question_7" value="d">блокиране с коя да е част от крака</span><br>
+        <span class="answer"><input type="radio" name="question_7"
+                                    value="d">блокиране с коя да е част от крака</span><br>
     </div>
     <div class="question">
         8. При желание за смяна от кой да е от отборите, тя трябва:<br>
@@ -109,10 +117,11 @@
         <span class="answer"><input type="radio" name="question_8" value="c">от капитана на отбора</span><br>
         <span class="answer"><input type="radio" name="question_8" value="d">да бъде поискана от играча, който ще влезе от скамейката</span><br>
     </div>
-    <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
-    <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
-    <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="https://bootswatch.com/_assets/js/custom.js"></script>
+</div>
+<script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
+<script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://bootswatch.com/_assets/js/custom.js"></script>
 </body>
 
 </html>
