--- a/app/tests_final.html
+++ b/app/tests_final.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="main-content" id="test-start-warning">
                     Време за решаване на теста - 30 минути. Започване?
-                    <button class="btn btn-primary" id="startTest" onclick="startCountDown(1800000)">Започване</button>
+                    <button class="btn btn-primary" id="startTest" onclick="startCountDown(1800000, './resources/answers_final.json')">Започване</button>
                 </div>
             </div>
         </div>
