rename home page

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Баскет</title>
+    <title>Basket-refs</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css" media="screen">    
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="./styles/main.css" media="screen">
@@ -16,7 +16,7 @@
         <div class="page-header" id="banner">
             <div class="row">
                 <div class="col-lg-8 col-md-7 col-sm-6">
-                    <h1>Баскет</h1>
+                    <h1>Basket-refs</h1>
                     <p class="lead">
                         Здравейте, това е платформата за
                         подготовка на баскетболни съдии basket-refs.
