add used sources

--- a/app/faq.html
+++ b/app/faq.html
@@ -33,7 +33,13 @@
         <br>
         <div class="faq">
             <p class="faq">Допълнителни въпроси?</p>
-            За допълнителни въпроси вижте <a href="about_us.html">За нас</a> .</div>
+            За допълнителни въпроси вижте <a href="about_us.html">За нас</a> .
+        </div>
+        <br>
+        <div class="faq">
+            <p class="faq">Откъде е взета информацията?</p>
+            <a href="http://www.basketball.bg/files/Sadiiska_komisia/PRAVILNIK_2015_bulgarian_14.02.2015.pdf">ФИБА</a> - Българска федерация по баскетбол Съдийска комисия към БФБ
+        </div>
     </div>
     <br>
 </div>
